<resources>
    <string name="detail_name">Name</string>
    <string name="detail_tags">Tags</string>
    <string name="detail_country">Country</string>
    <string name="detail_language">Language</string>
    <string name="detail_weblink">Weblink</string>
    <string name="detail_visit_website">@string/action_station_visit_website</string>
    <string name="detail_play">Play</string>
    <string name="detail_pause">Pause</string>
    <string name="detail_stop">Stop</string>
    <string name="detail_share">Share</string>
    <string name="detail_play_in_AMARadio">Play in AMARadio</string>
    <string name="action_links">Links</string>
    <string name="action_homepage">Homepage</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_starred_add">Add to favorites</string>
    <string name="action_starred_remove">Remove from favorites</string>
    <string name="action_station_visit_website">Visit Website</string>
    <string name="action_station_copy_stream_url">Copy Stream URL</string>
    <string name="action_station_share">Share</string>
    <string name="action_local">Local</string>
    <string name="action_skip_to_next">Next</string>
    <string name="action_pause">Pause</string>
    <string name="action_skip_to_previous">Previous</string>
    <string name="action_resume">Resume</string>
    <string name="action_stop">Stop</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_history">Delete history</string>
    <string name="action_delete_favorites">Delete favorites</string>
    <string name="action_delete_stream_history">Clear track history</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_top_click">Top Click</string>
    <string name="action_toggle_view">Toggle view</string>
    <string name="action_top_vote">Top Vote</string>
    <string name="action_changed_lately">Changed Lately</string>
    <string name="action_currently_playing">Playing</string>
    <string name="action_tags">Tags</string>
    <string name="action_countries">Countries/Regions</string>
    <string name="action_languages">Languages</string>
    <string name="action_edit">Edit</string>
    <string name="action_copy_info">Copy Info</string>
    <string name="action_rename_tab">Rename Tab</string>
    <string name="error_filter_name_required">Please enter a name for this filter tab first</string>
    <string name="confirm_delete_filter_tab">Are you sure you want to delete the filter \"%1$s\"?</string>
    <string name="filter_empty_title">Build Your Custom Radio Station Feed</string>
    <string name="filter_empty_desc">Create a personalized view by combining multiple criteria. You can narrow down your search using:</string>
    <string name="filter_empty_filter_by">Filter by</string>
    <string name="filter_empty_filter_desc">Country, Station Name, Tags, or Language</string>
    <string name="filter_empty_sort_by">Sort by</string>
    <string name="filter_empty_sort_desc">Clicks, Alphabet, Votes, or Last Change</string>
    <string name="filter_empty_hint">Type a name in the field above to save this custom view!</string>
    <string name="error_station_load">Could not connect to station</string>
    <string name="error_list_update">Could not connect to radio browser server</string>
    <string name="error_no_connection">No internet connection available</string>
    <string name="warning_volume_zero">Volume is at zero. You might not hear anything.</string>
    <string name="share_action">Share station link with…</string>
    <string name="nav_item_stations">Stations</string>
    <string name="nav_item_starred">Favorites</string>
    <string name="nav_item_history">History</string>
    <string name="nav_item_settings">Settings</string>
    <string name="about_text">AMARadio is 100% ad-free and privacy-focused.\n\nI originally developed this app for my mother to provide her with a simple, honest radio experience without annoying ads or tracking. This is why AMARadio will always remain free of advertisements – it\'s a promise to her, shared with all of you.\n\nThis project is a fork of the excellent https://github.com/segler-alex/RadioDroid . The entire codebase has been migrated from Java to Kotlin to ensure the app stays modern and compatible with future Android versions.\n\nThe source code is available at: https://github.com/ounben/AMARadio\n\nThis app uses the free radio station directory at https://www.radio-browser.info .\nEveryone can add stations to it. It works like a wiki for online radio stations.\n\nContact: ben@ounben.com\n\nBugtracker: https://github.com/ounben/AMARadio/issues\n\nIf you like the software and want to help, feel free to send me an email.\nAlso ideas for new features are always appreciated!\n\nThis app is free software, licensed under the GPLv3. https://www.gnu.org/licenses/gpl-3.0.html</string>
    <string name="about_version">Version: %1$s</string>
    <string name="detail_star">Add to favorites</string>
    <string name="detail_unstar">Delete from favorites</string>
    <string name="detail_play_in_external_player">@string/action_play_in_external</string>
    <string name="progress_loading">Loading…</string>
    <string name="sleep_timer" formatted="true">Sleep timer: %1$02d:%2$02d</string>
    <string name="sleep_timer_title">Stop playing after the selected minute</string>
    <string name="sleep_timer_apply">Apply</string>
    <string name="sleep_timer_clear">Clear</string>
    <string name="nav_item_add_sleep">Sleep timer</string>
    <string name="nav_item_save_playlist">Export favorites as playlist</string>
    <string name="nav_item_load_playlist">Import favorites from playlist</string>
    <string name="nav_item_save_history_playlist">Export history as playlist</string>
    <string name="confirm_overwrite_file">Overwrite the file?</string>
    <string name="dialog_hint_file_name">Enter file name</string>
    <string name="error_empty_field">This field is required</string>
    <string name="error_invalid_file_name">Invalid file name</string>
    <string name="error_no_file_manager">Could not find a system file manager. Please ensure a file explorer is installed and enabled.</string>
    <string name="error_no_browser">Could not find a web browser. Please install a browser to open this link.</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_theme_selection_title">Theme</string>
    <string name="settings_bottom_navigation">Bottom navigation</string>
    <string name="settings_ui_scale">UI Scaling</string>
    <string name="settings_interaction">Interaction</string>
    <string name="settings_single_use_tags">Show rarely-used tags</string>
    <string name="settings_single_use_tags_desc_off">Rarely-used tags will not be shown</string>
    <string name="settings_single_use_tags_desc_on">Rarely-used tags will be shown</string>
    <string name="settings_show_broken">Broken stations</string>
    <string name="settings_show_broken_on">Show broken stations in lists</string>
    <string name="settings_show_broken_off">Do not show broken stations in lists</string>
    <string name="settings_startup_behaviour">Start Behavior</string>
    <string name="startup_action_title">Start action</string>
    <string name="startup_show_history">Show history</string>
    <string name="settings_load_icons">Show station icons</string>
    <string name="settings_load_icons_on">Icons will be downloaded</string>
    <string name="settings_load_icons_off">Icons will not be downloaded</string>
    <string name="settings_auto_favorite">Auto-favorites</string>
    <string name="settings_auto_favorite_on">Add stations automatically to favorites when playing</string>
    <string name="settings_auto_favorite_off">Do not add stations automatically to favorites when playing</string>
    <string name="settings_play">Player</string>
    <string name="settings_auto_play_on_startup">Auto-play</string>
    <string name="settings_auto_play_on_startup_on">Play last station on startup</string>
    <string name="settings_auto_play_on_startup_off">Do not play last station on startup</string>
    <string name="settings_auto_off_on_startup">Auto-stop</string>
    <string name="settings_auto_off_on_startup_on">Use auto-stop timer with auto-play</string>
    <string name="settings_auto_off_on_startup_off">Do not use auto-stop timer with auto-play</string>
    <string name="settings_auto_off_sleep_timer">Auto-stop timer</string>
    <string name="settings_auto_off_sleep_timer_desc">Stop playing after %1$s minutes</string>
    <string name="settings_play_external">Enable external player</string>
    <string name="settings_play_external_desc_on">Play stations with external player</string>
    <string name="settings_play_external_desc_off">Play stations with AMARadio</string>
    <string name="settings_equalizer">Equalizer</string>
    <string name="settings_connectivity">Connectivity</string>
    <string name="settings_connect_timeout">Connection timeout</string>
    <string name="settings_read_timeout">Read timeout</string>
    <string name="settings_resume_timeout">Resume timeout</string>
    <string name="settings_retry_timeout">Retry timeout</string>
    <string name="settings_retry_delay">Reconnection delay</string>
    <string name="settings_proxy">Proxy</string>
    <string name="settings_seconds_format">%d seconds</string>
    <string name="settings_milliseconds_format">%d milliseconds</string>
    <string name="settings_pause_when_noisy">Pause on headset disconnect</string>
    <string name="settings_auto_resume_do_not_resume">Do not resume</string>
    <string name="settings_auto_resume_on_wired_headset_connected">Resume on wired connection</string>
    <string name="settings_auto_resume_on_wired_headset_connected_on">Resume playback on wired headset plug-in</string>
    <string name="settings_auto_resume_on_bluetooth_a2dp_connected">Resume on Bluetooth connection</string>
    <string name="settings_auto_resume_on_bluetooth_a2dp_connected_on">Resume playback on Bluetooth A2DP device connection</string>
    <string name="settings_warn_no_wifi">Off-Wi-Fi warning</string>
    <string name="settings_warn_no_wifi_on">Warn when playing without Wi-Fi connection</string>
    <string name="settings_warn_no_wifi_off">No warning when not on Wi-Fi connection</string>
    <string name="settings_disable_battery_optimization">Battery optimization</string>
    <string name="settings_ignore_battery_optimization_summary_on">Battery optimization is ignored, AMARadio should always be able to re-gain focus after focus loss.</string>
    <string name="settings_ignore_battery_optimization_summary_off">Battery optimization is activated, AMARadio will not be able to re-gain focus after focus loss if in background.</string>
    <string name="key_ignore_battery_optimization">ignore_battery_optimization</string>
    <string name="settings_other">Other</string>
    <string name="settings_statistics">Statistics</string>
    <string name="settings_about">About AMARadio</string>
    <string name="filter_country">Country</string>
    <string name="filter_tag">Tag</string>
    <string name="filter_language">Language</string>
    <string name="filter_sort_by">Sort by</string>
    <string name="filter_reverse">Reverse order</string>
    <string name="filter_apply">Apply Filter</string>
    <string name="context_menu_share">@string/detail_share</string>
    <string name="context_menu_visit_homepage">@string/action_station_visit_website</string>
    <string name="context_menu_play_in_AMARadio">@string/detail_play_in_AMARadio</string>
    <string name="context_menu_play_in_external_player">@string/action_play_in_external</string>
    <string name="context_menu_delete">@string/action_delete</string>
    <string name="context_menu_create_shortcut">@string/detail_create_shortcut</string>
</resources>