<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_play_in_amaradio"
        android:icon="@drawable/ic_play_in_amaradio_24dp"
        android:title="@string/context_menu_play_in_AMARadio" />
    <item
        android:id="@+id/action_play_in_external_player"
        android:icon="@drawable/ic_play_arrow_24dp"
        android:title="@string/context_menu_play_in_external_player" />
    <item
        android:id="@+id/action_visit_homepage"
        android:icon="@drawable/ic_home_24dp"
        android:title="@string/context_menu_visit_homepage" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_24dp"
        android:title="@string/context_menu_share" />
    <item
        android:id="@+id/action_add_alarm"
        android:icon="@drawable/ic_add_alarm_black_24dp"
        android:title="@string/context_menu_add_alarm" />
    <item
        android:id="@+id/action_create_shortcut"
        android:icon="@drawable/ic_back_arrow_24dp"
        android:title="@string/context_menu_create_shortcut" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/context_menu_delete" />
</menu>
